After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677724 - rfbsrc: Fix compiling in Windows
rfbsrc: Fix compiling in Windows
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
0.10.x
Other Windows
: Normal normal
: 0.10.24
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-08 20:01 UTC by Raimo Järvi
Modified: 2012-06-14 15:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix compiling in Windows (861 bytes, patch)
2012-06-08 20:04 UTC, Raimo Järvi
committed Details | Review

Description Raimo Järvi 2012-06-08 20:01:01 UTC
Compiling fails in Windows:

gstrfbsrc.c: In function 'gst_rfb_src_init':
gstrfbsrc.c:200:302: error: 'sink' undeclared (first use in this function)

The following patch is for 0.10 branch, but the same problem seems to exist in master as well.
Comment 1 Raimo Järvi 2012-06-08 20:04:04 UTC
Created attachment 215988 [details] [review]
Fix compiling in Windows
Comment 2 Vincent Penquerc'h 2012-06-14 15:40:06 UTC
Can't compile on Windows, but looks safe enough to push.
Also on master, though the plugin's not ported yet, so it still doesn't build there.

commit 90aa81127ad03232927b1de1d58ce62b4a3d8b28
Author: Raimo Järvi <raimo.jarvi@gmail.com>
Date:   Fri Jun 8 23:01:26 2012 +0300

    rfbsrc: Fix compiling in Windows
    
    https://bugzilla.gnome.org/show_bug.cgi?id=677724