rfbsrc: Fix compiling in Windows

https://bugzilla.gnome.org/show_bug.cgi?id=677724